updated board generation logic - added styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Game Board Generator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="gameBoard"></div>
-<button id="generateBtn">Generate Board</button>
-<p id="pathInfo"></p>
+<div id="gameContainer">
+    <div id="gameBoard"></div>
+    <svg id="pathOverlay"></svg>
+    <button id="generateBtn">{Generate Board}</button>
+    <p id="pathInfo"></p>
+</div>
 
 <script src="script.js"></script>
 </body>
