--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<div>
+    <div id="gameHeader"></div>
+    <h1>ALBiR Robo Puzzle</h1>
+    <p>Click the button to generate a board layout.</p>
+</div>
+
 <div id="gameContainer">
     <div id="gameBoard"></div>
     <svg id="pathOverlay"></svg>
