flex col centre fix

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<div>
-    <div id="gameHeader"></div>
+<div id="headerContainer">
     <h1>ALBiR Robo Puzzle</h1>
     <p>Click the button to generate a board layout.</p>
 </div>
