Update UI and add new features

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 <div id="gameContainer">
     <div id="gameBoard"></div>
     <svg id="pathOverlay"></svg>
-    <button id="generateBtn">{Generate Board}</button>
-    <p id="pathInfo"></p>
+    <div id="difficulty">Difficulty: N/A</div>
+    <button id="generateBtn">Generate Board</button>
+</div>
+
+<div id="difficulty"></div>
+<div id="scoringInfo">
+    <button id="infoToggle">► Show Scoring Info</button>
+    <div id="infoContent" style="display: none;"></div>
 </div>
 
 <script src="script.js"></script>
